opam-version: "1.2"
authors: ["Anil Madhavapeddy" "Daniel C. Bünzli" "Matthew Gray"]
maintainer: "anil@recoil.org"
homepage: "https://github.com/mirage/mirage-clock"
bug-reports: "https://github.com/mirage/mirage-clock/issues"
dev-repo: "git://github.com/mirage/mirage-clock"
license: "ISC"
tags: [
  "org:mirage"
  "org:xapi-project"
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "mirage-types" {>= "3.0.0"}
  "mirage-types-lwt" {>= "3.0.0"}
  "lwt"
]
build: [
  "ocaml" "pkg/pkg.ml" "build"
            "--pkg-name" name
            "--pinned" "%{pinned}%" ]
