opam-version: "1.2"
authors: ["Anil Madhavapeddy" "Daniel C. Bünzli" "Matthew Gray"]
maintainer: "anil@recoil.org"
homepage: "https://github.com/mirage/mirage-clock"
bug-reports: "https://github.com/mirage/mirage-clock/issues"
dev-repo: "git://github.com/mirage/mirage-clock"
license: "ISC"
tags: ["org:mirage"]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >="1.0+beta8"}
  "topkg" {build & >= "0.8.0"}
  "topkg-jbuilder" {build}
  "mirage-clock" {>= "1.2.0"}
  "mirage-clock-lwt" {>= "1.2.0"}
  "lwt"
]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs ]]
