opam-version: "1.2"
authors: "The MirageOS team"
maintainer: "anil@recoil.org"
homepage: "https://github.com/mirage/mirage-clock"
bug-reports: "https://github.com/mirage/mirage-clock/issues"
tags: [
  "org:mirage"
  "org:xapi-project"
]
build: [make "unix-build"]
install: [make "unix-install"]
remove: ["ocamlfind" "remove" "mirage-clock-unix"]
depends: [
  "ocamlfind"
  "mirage-types" {>= "0.3.0"}
]
dev-repo: "git://github.com/mirage/mirage-clock"
