opam-version: "1.2"
authors: ["Anil Madhavapeddy" "Daniel C. Bünzli" "Matthew Gray"]
maintainer: "anil@recoil.org"
homepage: "https://github.com/mirage/mirage-clock"
bug-reports: "https://github.com/mirage/mirage-clock/issues"
license: "ISC"
tags: [
  "org:mirage"
  "org:xapi-project"
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "mirage-types" {>= "0.3.0"}
  "mirage-types-lwt"
  "lwt"
]
build: [ "ocaml" "pkg/pkg.ml" "build" "--pkg-name" name "--pinned" "%{pinned}%" ]
build-test: [
  [ "ocaml" "pkg/pkg.ml" "build" "--pkg-name" name "--pinned" "%{pinned}%" "--tests" "true" ]
  [ "ocaml" "pkg/pkg.ml" "test" ]
]
dev-repo: "git://github.com/mirage/mirage-clock"
