opam-version: "1.2"
authors: ["Anil Madhavapeddy" "Daniel C. Bünzli" "Matthew Gray"]
maintainer: "anil@recoil.org"
homepage: "https://github.com/mirage/mirage-clock"
bug-reports: "https://github.com/mirage/mirage-clock/issues"
dev-repo: "git://github.com/mirage/mirage-clock"
doc: "https://mirage.github.io/mirage-clock/"
license: "ISC"
tags: ["org:mirage"]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >="1.0+beta8"}
  "topkg" {build & >= "0.8.0"}
  "topkg-jbuilder" {build}
  "mirage-device" {>= "1.0.0"}
]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
