(library
 (name        mirage_clock_freestanding)
 (wrapped     false)
 (public_name mirage-clock-freestanding)
 (libraries   mirage-clock)
 (foreign_stubs
  (language c)
  (names clock_stubs)))

(rule
 (target clock_stubs.c)
 (deps clock_stubs.freestanding.c clock_stubs.default.c)
 (action (copy clock_stubs.%{context_name}.c %{target})))
